# ooc

./: CMakeLists.txt  LICENSE  README.md  main.c
01/: CMakeLists.txt
02/: CMakeLists.txt
04/: CMakeLists.txt  main.c  points.c
05/: CMakeLists.txt  Name.c  Var.c  main.c  main.h  mathlib.c  value.c
06/: CMakeLists.txt  main.c
inc/: awesome_car.h  car.h  circle.h  log.h  rect.h  sandbox.h  shape.h
src/: awesome_car.c  car.c  circle.c  log.c  rect.c  sandbox.c  shape.c
